updated with sample tests