@@ -18,7 +18,7 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.3.1</version>
+      <version>4.13.2</version>
       <scope>test</scope>
     </dependency>
 
@@ -45,10 +45,51 @@
       <artifactId>selenium-remote-driver</artifactId>
       <version>4.22.0</version>
     </dependency>
-    <dependency>
-      <groupId>io.github.bonigarcia</groupId>
-      <artifactId>webdrivermanager</artifactId>
-      <version>5.0.3</version>
-    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>io.github.bonigarcia</groupId>-->
+<!--      <artifactId>webdrivermanager</artifactId>-->
+<!--      <version>5.0.3</version>-->
+<!--    </dependency>-->
   </dependencies>
+  <build>
+    <plugins>
+      <plugin>
+        <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.6.2</version>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.20</version>
+        <executions>
+          <execution>
+            <!--  <id>acceptance-test</id>
+             <phase>integration-test</phase> -->
+            <goals>
+              <goal>test</goal>
+            </goals>
+            <configuration>
+              <!--<outputEncoding>UTF-8</outputEncoding>-->
+              <parallel>classes</parallel>
+              <perCoreThreadCount>true</perCoreThreadCount>
+              <threadCountClasses>10</threadCountClasses>
+              <argLine>-Xmx1024m</argLine>
+              <argLine>-XX:MaxPermSize=256m</argLine>
+              <includes>
+                <exclude>**/StartUpAppium*.java</exclude>
+              </includes>
+            </configuration>
+          </execution>
+        </executions>
+
+      </plugin>
+    </plugins>
+  </build>
+
 </project>
